# StandartSampleTGBOT

BotTG/: pyproject.toml
BotTG/bottg/: main.py
BotTG/bottg/core/message/: message.py
BotTG/bottg/core/message/handlers/: callback.py
BotTG/bottg/database/models/: users.py
BotTG/bottg/utils/: loader.py  loaderINI.py  loaderJSON.py
BotTG/data/: config.ini  msg.json
